--- a/WordPressEditor/src/main/res/layout-sw600dp/fragment_editor.xml
+++ b/WordPressEditor/src/main/res/layout-sw600dp/fragment_editor.xml
@@ -1,7 +1,8 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
+             android:orientation="vertical"
              tools:context="org.wordpress.android.editor.EditorFragment">
 
     <include
@@ -126,4 +127,4 @@
         </LinearLayout>
     </LinearLayout>
 
-</FrameLayout>
+</LinearLayout>
