--- a/WordPressEditor/src/main/res/values/styles.xml
+++ b/WordPressEditor/src/main/res/values/styles.xml
@@ -28,8 +28,8 @@
     </style>
 
     <style name="Divider">
-        <item name="android:background">@color/wp_gray</item>
-        <item name="android:alpha">0.5</item>
+        <item name="android:background">@color/format_bar_divider</item>
+        <item name="android:alpha">1</item>
     </style>
 
     <style name="DividerSourceView" parent="Divider">
