--- a/WordPressEditor/src/main/res/values/dimens.xml
+++ b/WordPressEditor/src/main/res/values/dimens.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="format_bar_height">44dp</dimen>
+    <dimen name="format_bar_height_tablet">49dp</dimen>
     <dimen name="format_bar_left_margin">5dp</dimen>
     <dimen name="format_bar_right_margin">2dp</dimen>
     <dimen name="format_bar_button_right_margin">5dp</dimen>
