--- a/WordPressEditor/src/main/res/values/dimens.xml
+++ b/WordPressEditor/src/main/res/values/dimens.xml
@@ -10,10 +10,12 @@
     <dimen name="format_bar_button_margin_tablet">@dimen/format_bar_button_margin_tablet_small</dimen>
     <dimen name="format_bar_button_margin_tablet_small">2dp</dimen>
     <dimen name="format_bar_button_margin_tablet_large">7dp</dimen>
+    <dimen name="format_bar_button_margin_tablet_extra_large">12dp</dimen>
 
     <dimen name="format_bar_button_group_tablet">@dimen/format_bar_button_group_tablet_small</dimen>
     <dimen name="format_bar_button_group_tablet_small">15dp</dimen>
     <dimen name="format_bar_button_group_tablet_large">25dp</dimen>
+    <dimen name="format_bar_button_group_tablet_extra_large">35dp</dimen>
 
     <dimen name="format_bar_horizontal_divider_height">1dp</dimen>
     <dimen name="format_bar_vertical_divider_width">0.6dp</dimen>
