--- a/WordPressEditor/src/main/res/layout/fragment_editor.xml
+++ b/WordPressEditor/src/main/res/layout/fragment_editor.xml
@@ -99,7 +99,8 @@
             <HorizontalScrollView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="1">
+                android:layout_weight="1"
+                android:layout_marginRight="@dimen/format_bar_scroll_right_margin">
 
                 <LinearLayout
                     android:layout_width="wrap_content"
@@ -164,12 +165,12 @@
                 </LinearLayout>
             </HorizontalScrollView>
 
-            <View
-                android:id="@+id/format_bar_vertical_divider"
-                android:layout_width="@dimen/format_bar_vertical_divider_width"
-                android:layout_height="@dimen/format_bar_vertical_divider_height"
-                android:layout_gravity="center"
-                style="@style/Divider"/>
+            <ImageView
+                android:src="@drawable/format_bar_chevron"
+                android:background="@android:color/transparent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/imageView" />
 
             <ToggleButton
                 android:id="@+id/format_bar_button_html"
