add contentDescription to format bar buttons in the visual and legacy editors

--- a/WordPressEditor/src/main/res/layout-w380dp/format_bar.xml
+++ b/WordPressEditor/src/main/res/layout-w380dp/format_bar.xml
@@ -31,6 +31,7 @@
             android:layout_width="wrap_content"
             android:layout_height="fill_parent"
             android:layout_weight="1"
+            android:contentDescription="@string/format_bar_description_media"
             android:background="@drawable/format_bar_button_media_selector"/>
 
         <org.wordpress.android.editor.RippleToggleButton
@@ -39,6 +40,7 @@
             android:layout_width="wrap_content"
             android:layout_height="fill_parent"
             android:layout_weight="1"
+            android:contentDescription="@string/format_bar_description_bold"
             android:background="@drawable/format_bar_button_bold_selector"
             android:tag="@string/format_bar_tag_bold"/>
 
@@ -48,6 +50,7 @@
             android:layout_width="wrap_content"
             android:layout_height="fill_parent"
             android:layout_weight="1"
+            android:contentDescription="@string/format_bar_description_italic"
             android:background="@drawable/format_bar_button_italic_selector"
             android:tag="@string/format_bar_tag_italic"/>
 
@@ -57,6 +60,7 @@
             android:layout_width="wrap_content"
             android:layout_height="fill_parent"
             android:layout_weight="1"
+            android:contentDescription="@string/format_bar_description_quote"
             android:background="@drawable/format_bar_button_quote_selector"
             android:tag="@string/format_bar_tag_blockquote"/>
 
@@ -66,6 +70,7 @@
             android:layout_width="wrap_content"
             android:layout_height="fill_parent"
             android:layout_weight="1"
+            android:contentDescription="@string/format_bar_description_ul"
             android:background="@drawable/format_bar_button_ul_selector"
             android:tag="@string/format_bar_tag_unorderedList"/>
 
@@ -75,6 +80,7 @@
             android:layout_width="wrap_content"
             android:layout_height="fill_parent"
             android:layout_weight="1"
+            android:contentDescription="@string/format_bar_description_ol"
             android:background="@drawable/format_bar_button_ol_selector"
             android:tag="@string/format_bar_tag_orderedList"/>
 
@@ -84,6 +90,7 @@
             android:layout_width="wrap_content"
             android:layout_height="fill_parent"
             android:layout_weight="1"
+            android:contentDescription="@string/format_bar_description_link"
             android:background="@drawable/format_bar_button_link_selector"
             android:tag="@string/format_bar_tag_link"/>
 
@@ -99,6 +106,7 @@
             style="@style/FormatBarHtmlButton"
             android:layout_width="wrap_content"
             android:layout_height="fill_parent"
+            android:contentDescription="@string/format_bar_description_html"
             android:background="@drawable/format_bar_button_html_selector"/>
     </LinearLayout>
 </LinearLayout>
