--- a/WordPressEditor/src/main/res/layout-w600dp/format_bar.xml
+++ b/WordPressEditor/src/main/res/layout-w600dp/format_bar.xml
@@ -34,6 +34,7 @@
                 style="@style/FormatBarButtonTablet"
                 android:layout_width="wrap_content"
                 android:layout_height="fill_parent"
+                android:contentDescription="@string/format_bar_description_media"
                 android:background="@drawable/format_bar_button_media_selector"/>
         </LinearLayout>
 
@@ -47,6 +48,7 @@
                 style="@style/FormatBarButtonTablet"
                 android:layout_width="wrap_content"
                 android:layout_height="fill_parent"
+                android:contentDescription="@string/format_bar_description_bold"
                 android:background="@drawable/format_bar_button_bold_selector"
                 android:tag="@string/format_bar_tag_bold"/>
 
@@ -55,6 +57,7 @@
                 style="@style/FormatBarButtonTablet"
                 android:layout_width="wrap_content"
                 android:layout_height="fill_parent"
+                android:contentDescription="@string/format_bar_description_italic"
                 android:background="@drawable/format_bar_button_italic_selector"
                 android:tag="@string/format_bar_tag_italic"/>
 
@@ -77,6 +80,7 @@
                 style="@style/FormatBarButtonTablet"
                 android:layout_width="wrap_content"
                 android:layout_height="fill_parent"
+                android:contentDescription="@string/format_bar_description_link"
                 android:background="@drawable/format_bar_button_link_selector"
                 android:tag="@string/format_bar_tag_link"/>
         </LinearLayout>
@@ -91,6 +95,7 @@
                 style="@style/FormatBarButtonTablet"
                 android:layout_width="wrap_content"
                 android:layout_height="fill_parent"
+                android:contentDescription="@string/format_bar_description_ul"
                 android:background="@drawable/format_bar_button_ul_selector"
                 android:tag="@string/format_bar_tag_unorderedList"/>
 
@@ -99,6 +104,7 @@
                 style="@style/FormatBarButtonTablet"
                 android:layout_width="wrap_content"
                 android:layout_height="fill_parent"
+                android:contentDescription="@string/format_bar_description_ol"
                 android:background="@drawable/format_bar_button_ol_selector"
                 android:tag="@string/format_bar_tag_orderedList"/>
 
@@ -107,6 +113,7 @@
                 style="@style/FormatBarButtonTablet"
                 android:layout_width="wrap_content"
                 android:layout_height="fill_parent"
+                android:contentDescription="@string/format_bar_description_quote"
                 android:background="@drawable/format_bar_button_quote_selector"
                 android:tag="@string/format_bar_tag_blockquote"/>
         </LinearLayout>
@@ -121,6 +128,7 @@
                 style="@style/FormatBarButtonTablet"
                 android:layout_width="wrap_content"
                 android:layout_height="fill_parent"
+                android:contentDescription="@string/format_bar_description_html"
                 android:background="@drawable/format_bar_button_html_selector"/>
         </LinearLayout>
     </LinearLayout>
