--- a/WordPressEditor/src/main/res/layout/format_bar.xml
+++ b/WordPressEditor/src/main/res/layout/format_bar.xml
@@ -42,6 +42,7 @@
                     style="@style/FormatBarButton"
                     android:layout_width="wrap_content"
                     android:layout_height="fill_parent"
+                    android:contentDescription="@string/format_bar_description_media"
                     android:background="@drawable/format_bar_button_media_selector"/>
 
                 <org.wordpress.android.editor.RippleToggleButton
@@ -49,6 +50,7 @@
                     style="@style/FormatBarButton"
                     android:layout_width="wrap_content"
                     android:layout_height="fill_parent"
+                    android:contentDescription="@string/format_bar_description_bold"
                     android:background="@drawable/format_bar_button_bold_selector"
                     android:tag="@string/format_bar_tag_bold"/>
 
@@ -57,6 +59,7 @@
                     style="@style/FormatBarButton"
                     android:layout_width="wrap_content"
                     android:layout_height="fill_parent"
+                    android:contentDescription="@string/format_bar_description_italic"
                     android:background="@drawable/format_bar_button_italic_selector"
                     android:tag="@string/format_bar_tag_italic"/>
 
@@ -65,6 +68,7 @@
                     style="@style/FormatBarButton"
                     android:layout_width="wrap_content"
                     android:layout_height="fill_parent"
+                    android:contentDescription="@string/format_bar_description_quote"
                     android:background="@drawable/format_bar_button_quote_selector"
                     android:tag="@string/format_bar_tag_blockquote"/>
 
@@ -73,6 +77,7 @@
                     style="@style/FormatBarButton"
                     android:layout_width="wrap_content"
                     android:layout_height="fill_parent"
+                    android:contentDescription="@string/format_bar_description_ul"
                     android:background="@drawable/format_bar_button_ul_selector"
                     android:tag="@string/format_bar_tag_unorderedList"/>
 
@@ -81,6 +86,7 @@
                     style="@style/FormatBarButton"
                     android:layout_width="wrap_content"
                     android:layout_height="fill_parent"
+                    android:contentDescription="@string/format_bar_description_ol"
                     android:background="@drawable/format_bar_button_ol_selector"
                     android:tag="@string/format_bar_tag_orderedList"/>
 
@@ -89,6 +95,7 @@
                     style="@style/FormatBarButton"
                     android:layout_width="wrap_content"
                     android:layout_height="fill_parent"
+                    android:contentDescription="@string/format_bar_description_link"
                     android:background="@drawable/format_bar_button_link_selector"
                     android:tag="@string/format_bar_tag_link"/>
             </LinearLayout>
@@ -106,6 +113,7 @@
             style="@style/FormatBarHtmlButton"
             android:layout_width="wrap_content"
             android:layout_height="fill_parent"
+            android:contentDescription="@string/format_bar_description_html"
             android:background="@drawable/format_bar_button_html_selector"/>
     </LinearLayout>
 </LinearLayout>
