fix #382: show a dashed horizontal line in place of the more tag

--- a/libs/editor-common/assets/editor.css
+++ b/libs/editor-common/assets/editor.css
@@ -439,3 +439,8 @@ div.field[placeholderText][contenteditable=true]:empty:focus:before {
     padding-left: 80px;
     padding-right: 80px;
 }
+
+.more-tag {
+  border: none;
+  border-top: 2px dashed grey;
+}
