Revert "Padding instead of margins in editor editables"
This reverts commit 74cc72ee87adb5aed58ee2dfdedf5ae93258c1b9.

--- a/WordPressEditor/src/main/assets/editor.css
+++ b/WordPressEditor/src/main/assets/editor.css
@@ -45,6 +45,9 @@ html, body {
 }
 
 body {
+    padding-left:15px;
+    padding-right:15px;
+    padding-top: 15px;
     padding-bottom: 5px;
     overflow-y: auto;
     min-height: 100vh;
@@ -400,13 +403,8 @@ div.field[placeholderText][contenteditable=true]:empty:focus:before {
 
 #separatorDiv {
     -webkit-user-select: none;
-    padding-bottom: 5px;
-}
-
-#separatorDiv hr {
-    padding-left:15px;
-    padding-right:15px;
-    margin: 0;
+    padding-top: 5px;
+    padding-bottom: 15px;
 }
 
 #zss_field_title, #zss_field_title p {
@@ -414,20 +412,13 @@ div.field[placeholderText][contenteditable=true]:empty:focus:before {
     font-weight: bold;
     font-size: 24px;
     line-height: 32px;
-    padding-top: 15px;
-    padding-left:15px;
-    padding-right:15px;
-    padding-bottom: 10px;
     margin-bottom: 0px;
 }
 
 #zss_field_content {
     font-size: 16px;
     line-height: 24px;
-    padding-top: 10px;
-    padding-left:15px;
-    padding-right:15px;
-    padding-bottom: 10px;
+    margin-bottom: 10px;
 }
 
 .wp-temp[data-wp-temp="caption"] {
