Fix a margin issue on big screen with the beta button in Aztec title

--- a/WordPressEditor/src/main/res/layout/fragment_aztec_editor.xml
+++ b/WordPressEditor/src/main/res/layout/fragment_aztec_editor.xml
@@ -38,14 +38,14 @@
                     android:layout_toLeftOf="@+id/title_beta"
                     android:layout_toStartOf="@+id/title_beta"
                     android:layout_width="match_parent"
-                    android:padding="16dp"
+                    android:padding="@dimen/margin_extra_large"
                     android:fontFamily="serif"
                     android:textStyle="bold"
                     android:textSize="@dimen/aztec_title_size"
                     android:imeOptions="flagNoExtractUi"
                     aztec:lineSpacingExtra="@dimen/spacing_extra_title"
                     aztec:textColor="@color/grey_dark"
-                    aztec:textColorHint="@color/hint_text" >
+                    aztec:textColorHint="@color/hint_text">
                 </org.wordpress.aztec.AztecText>
 
                 <ImageButton
@@ -55,10 +55,10 @@
                     android:layout_alignParentEnd="true"
                     android:layout_alignParentRight="true"
                     android:layout_centerVertical="true"
-                    android:padding="@dimen/sourceview_side_margin"
-                    android:src="@drawable/ic_gridicons_help"
                     android:background="?android:attr/selectableItemBackground"
-                    android:contentDescription="@string/editor_title_beta">
+                    android:contentDescription="@string/editor_title_beta"
+                    android:padding="@dimen/margin_extra_large"
+                    android:src="@drawable/ic_gridicons_help">
                 </ImageButton>
 
             </RelativeLayout>
