--- a/WordPressEditor/src/main/res/layout/dialog_image_options.xml
+++ b/WordPressEditor/src/main/res/layout/dialog_image_options.xml
@@ -143,7 +143,7 @@
                 app:srcCompat="@drawable/media_icon_32dp"/>
 
             <SeekBar
-                android:id="@+id/image_width_seekbar"
+                android:id="@+id/image_size_seekbar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_toRightOf="@+id/image_icon"/>
