Fixed toolbar height.

--- a/WordPressEditor/src/main/res/layout/fragment_aztec_editor.xml
+++ b/WordPressEditor/src/main/res/layout/fragment_aztec_editor.xml
@@ -9,7 +9,7 @@
     <org.wordpress.aztec.toolbar.AztecToolbar
         android:id="@+id/formatting_toolbar"
         android:layout_alignParentBottom="true"
-        android:layout_height="@dimen/format_bar_height"
+        android:layout_height="wrap_content"
         android:layout_width="match_parent"
         aztec:advanced="true" >
     </org.wordpress.aztec.toolbar.AztecToolbar>
