Fixed various lint issues.

--- a/WordPressEditor/src/main/res/layout/dialog_image_options.xml
+++ b/WordPressEditor/src/main/res/layout/dialog_image_options.xml
@@ -24,7 +24,9 @@
                 android:layout_height="@dimen/image_settings_dialog_thumbnail_size"
                 android:orientation="horizontal"
                 android:layout_marginLeft="@dimen/image_settings_dialog_thumbnail_left_margin"
+                android:layout_marginStart="@dimen/image_settings_dialog_thumbnail_left_margin"
                 android:layout_marginRight="@dimen/image_settings_dialog_thumbnail_right_margin"
+                android:layout_marginEnd="@dimen/image_settings_dialog_thumbnail_right_margin"
                 android:gravity="center">
                 <ImageView
                     android:id="@+id/image_thumbnail"
@@ -46,6 +48,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/image_settings_dialog_filename_margin_left"
+                android:layout_marginStart="@dimen/image_settings_dialog_filename_margin_left"
                 android:layout_gravity="center_vertical"/>
         </LinearLayout>
 
@@ -146,7 +149,8 @@
                 android:id="@+id/image_size_seekbar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_toRightOf="@+id/image_icon"/>
+                android:layout_toRightOf="@+id/image_icon"
+                android:layout_toEndOf="@+id/image_icon" />
         </RelativeLayout>
 
         <EditText
