--- a/WordPressEditor/src/main/res/values/styles.xml
+++ b/WordPressEditor/src/main/res/values/styles.xml
@@ -4,7 +4,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <style name="Calypso.Dialog" parent="@style/Theme.AppCompat.Light.Dialog">
+    <style name="Calypso.Dialog.Alert" parent="@style/Theme.AppCompat.Light.Dialog.Alert">
         <item name="colorAccent">@color/blue_medium</item>
         <item name="colorPrimary">@color/blue_wordpress</item>
         <item name="colorPrimaryDark">@color/status_bar_tint</item>
