--- a/WordPressEditor/src/main/res/menu/menu_gutenberg.xml
+++ b/WordPressEditor/src/main/res/menu/menu_gutenberg.xml
@@ -1,28 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <menu
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto" >
-
-    <item
-        android:id="@+id/undo"
-        android:title="@string/menu_undo"
-        android:orderInCategory="0"
-        android:icon="@drawable/ic_action_undo_selector">
-    </item>
+    xmlns:android="http://schemas.android.com/apk/res/android" >
 
     <item
         android:id="@+id/redo"
         android:title="@string/menu_redo"
         android:orderInCategory="0"
         android:icon="@drawable/ic_action_redo_selector">
-    </item>
-
-    <item
-        android:id="@+id/debugmenu"
-        android:title="@string/menu_debug"
-        android:orderInCategory="0"
-        android:icon="@drawable/ic_launcher">
     </item>
 
 </menu>
