--- a/WordPressEditor/src/main/res/menu/menu_gutenberg.xml
+++ b/WordPressEditor/src/main/res/menu/menu_gutenberg.xml
@@ -11,4 +11,11 @@
         android:icon="@drawable/ic_launcher">
     </item>
 
+    <item
+        android:id="@+id/aztecmenu"
+        android:title="@string/menu_aztec"
+        android:orderInCategory="0"
+        android:icon="@drawable/ic_launcher">
+    </item>
+
 </menu>
