- Remove focus from title on existing post - Set focus on title on the new post

--- a/WordPressEditor/src/main/res/layout/fragment_gutenberg_editor.xml
+++ b/WordPressEditor/src/main/res/layout/fragment_gutenberg_editor.xml
@@ -3,7 +3,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:focusable="false"
+    android:focusableInTouchMode="true">
 
     <org.wordpress.android.editor.EditTextWithKeyBackListener
         android:id="@+id/title"
