--- a/WordPressEditor/src/main/res/layout/fragment_gutenberg_editor.xml
+++ b/WordPressEditor/src/main/res/layout/fragment_gutenberg_editor.xml
@@ -1,42 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/white"
-    android:orientation="vertical"
-    android:focusable="false"
-    android:focusableInTouchMode="true">
-
-    <FrameLayout
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:background="@color/white"
+              android:focusable="false"
+              android:focusableInTouchMode="true"
+              android:orientation="vertical">
+    <com.facebook.react.ReactRootView
+        android:id="@+id/gutenberg"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_width="match_parent" >
-
-        <com.facebook.react.ReactRootView
-            android:id="@+id/gutenberg"
-            android:hint="@string/editor_content_hint"
-            android:layout_height="match_parent"
-            android:layout_width="match_parent"
+        android:hint="@string/editor_content_hint"
         />
 
-        <org.wordpress.aztec.source.SourceViewEditText
-            android:id="@+id/source"
-            android:gravity="top|start"
-            android:inputType="textNoSuggestions|textMultiLine"
-            android:layout_height="match_parent"
-            android:layout_width="match_parent"
-            android:paddingTop="16dp"
-            android:paddingLeft="16dp"
-            android:paddingStart="16dp"
-            android:paddingRight="16dp"
-            android:paddingEnd="16dp"
-            android:scrollbars="vertical"
-            android:textColorHint="@color/hint_text"
-            android:background="@null"
-            android:textSize="14sp"
-            android:visibility="gone"
-            android:fontFamily="monospace"
-            android:imeOptions="flagNoExtractUi" />
-
-    </FrameLayout>
-
+    <org.wordpress.aztec.source.SourceViewEditText
+        android:id="@+id/source"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@null"
+        android:fontFamily="monospace"
+        android:gravity="top|start"
+        android:imeOptions="flagNoExtractUi"
+        android:inputType="textNoSuggestions|textMultiLine"
+        android:paddingEnd="16dp"
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp"
+        android:paddingStart="16dp"
+        android:paddingTop="16dp"
+        android:scrollbars="vertical"
+        android:textColorHint="@color/hint_text"
+        android:textSize="14sp"
+        android:visibility="gone"/>
 </LinearLayout>
