--- a/WordPressEditor/src/main/res/layout/fragment_gutenberg_editor.xml
+++ b/WordPressEditor/src/main/res/layout/fragment_gutenberg_editor.xml
@@ -5,4 +5,12 @@
     android:layout_width="match_parent"
     android:background="@color/white"
     android:focusable="false"
-    android:focusableInTouchMode="true"/>
+    android:focusableInTouchMode="true">
+
+    <ProgressBar
+        android:id="@+id/editor_progress"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"/>
+</FrameLayout>
