Update color references from white to android resource

--- a/WordPressEditor/src/main/res/layout/fragment_aztec_editor.xml
+++ b/WordPressEditor/src/main/res/layout/fragment_aztec_editor.xml
@@ -2,7 +2,7 @@
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:aztec="http://schemas.android.com/apk/res-auto"
-    android:background="@color/white"
+    android:background="@android:color/white"
     android:layout_height="match_parent"
     android:layout_width="match_parent">
 
