--- a/WordPressEditor/src/main/res/layout/fragment_gutenberg_editor.xml
+++ b/WordPressEditor/src/main/res/layout/fragment_gutenberg_editor.xml
@@ -3,7 +3,7 @@
     android:id="@+id/gutenberg_container"
     android:layout_height="match_parent"
     android:layout_width="match_parent"
-    android:background="@color/white"
+    android:background="@android:color/white"
     android:focusable="false"
     android:focusableInTouchMode="true">
 
