--- a/WordPressEditor/src/main/res/layout/dialog_image_options.xml
+++ b/WordPressEditor/src/main/res/layout/dialog_image_options.xml
@@ -141,6 +141,7 @@
 
             <ImageView
                 android:id="@+id/image_icon"
+                android:importantForAccessibility="no"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 app:srcCompat="@drawable/media_icon_32dp"/>
